--- a/TaskmasterMPI/Project.toml
+++ b/TaskmasterMPI/Project.toml
@@ -4,4 +4,5 @@ authors = ["rstiskalek <richard.stiskalek@protonmail.com>"]
 version = "0.1.0"
 
 [deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
